# opensportsync

./: .gitignore  ARCHITECTURE.md  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
.github/workflows/: build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/cpp/libambit/: device_support.c  device_support.h  libambit_android.c
android/app/src/main/cpp/libambit/hidapi/: hid-android.c
android/app/src/main/java/com/ambitsyncmodern/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/ambitsyncmodern/usb/: AmbitUsbModule.kt  AmbitUsbPackage.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: device_filter.xml  file_paths.xml
scripts/: generate_icons.py
src/components/: ElevationChart.tsx
src/database/: db.ts
src/i18n/: index.ts
src/native/: AmbitUsbModule.d.ts  AmbitUsbModule.ts  DeviceConnector.ts
src/screens/: HomeScreen.tsx  LogListScreen.tsx  MapScreen.tsx  SettingsScreen.tsx
src/services/: ApiLivelox.ts  ApiRunalyze.ts  ApiStrava.ts  FitExport.ts  GpxParser.ts  GpxService.ts  SgeeService.ts  SyncService.ts  UpdateService.ts  VikazimutExport.ts
src/services/devices/: AmbitDeviceProvider.ts  DeviceProvider.ts
